[tool.poetry]
name = "tripadvisor"
version = "0.1.0"
description = "A simple web graphing data fetching tool from Tripadvisor"
authors = ["thangbuiq <buiquangthangtv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = {extras = ["brotli", "http2"], version = "^0.28.0"}
loguru = "^0.7.2"
parsel = "^1.9.1"
asyncio = "^3.4.3"
urllib3 = "^2.2.3"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
google-cloud-bigquery = "^3.27.0"
pandas = "^2.2.3"
db-dtypes = "^1.3.1"
google-cloud-bigquery-storage = "^2.27.0"
selenium = "^4.27.1"
beautifulsoup4 = "^4.12.3"
browsercookie = "^0.7.9"
sqlparse = "^0.5.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
