[tool.uv]
package = true

[build-system]
requires = ["setuptools", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "tripadvisor"
version = "0.1.0"
description = "A simple web graphing data fetching tool from Tripadvisor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "google-cloud-bigquery-storage>=2.27.0",
    "google-cloud-bigquery>=3.27.0",
    "httpx[brotli,http2]>=0.28.1",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "pandas>=2.2.3",
    "db-dtypes>=1.3.1",
    "beautifulsoup4>=4.12.3",
    "sqlparse>=0.5.2",
    "protobuf>=5.29.1",
    "ruff>=0.8.4",
    "boto3>=1.35.90",
    "s3fs<=0.4.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]
